removed built-in songpack and associated assets; added ability to disable Reactive Music and use vanilla music